[kitchen]首页收货地址页面及业务逻辑

--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
@@ -31,33 +31,45 @@
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
-        <android.support.v4.widget.Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/tv_address"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:drawableEnd="@drawable/ic_pull_down"
-            android:drawablePadding="5dp"
-            android:drawableRight="@drawable/ic_pull_down"
             android:gravity="center"
-            android:text="益江路 511弄..."
-            android:textColor="@android:color/white" />
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_weight="1">
 
-        <android.support.v4.widget.Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            <TextView
+                android:id="@+id/tv_address"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:lines="1"
+                android:text="益江路 511弄..."
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
 
-        <ImageView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_pull_down"
+                android:layout_toRightOf="@+id/tv_address"
+                android:layout_toEndOf="@+id/tv_address" />
+
+        </RelativeLayout>
+
+        <ImageButton
+            android:id="@+id/imgBtn_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:src="@drawable/ic_menu_search" />
+            android:background="@drawable/ic_menu_search" />
     </LinearLayout>
 
     <com.jiajiaqian.kitchen.common.uielements.SwipeRefreshLayout
@@ -124,8 +136,8 @@
                             android:gravity="center"
                             android:padding="3dp"
                             android:text="优惠商品"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
                     </LinearLayout>
 
@@ -149,8 +161,8 @@
                             android:gravity="center"
                             android:padding="3dp"
                             android:text="劲爆团购"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
                     </LinearLayout>
 
@@ -174,8 +186,8 @@
                             android:gravity="center"
                             android:padding="3dp"
                             android:text="人气推荐"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
                     </LinearLayout>
 
@@ -216,8 +228,8 @@
                             android:layout_toRightOf="@id/image_you"
                             android:gravity="center"
                             android:text="优惠商品"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
                         <TextView
                             android:id="@+id/tv_you_jiantou"
@@ -231,8 +243,8 @@
                             android:layout_marginTop="8dp"
                             android:gravity="center"
                             android:text=">"
-                            android:textSize="18sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/tv_youhui_more"
@@ -246,8 +258,8 @@
                             android:layout_toStartOf="@+id/tv_you_jiantou"
                             android:gravity="center"
                             android:text="更多"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
 
                     </RelativeLayout>
@@ -297,8 +309,8 @@
                             android:layout_toRightOf="@id/image_tuan"
                             android:gravity="center"
                             android:text="劲爆团购"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
                         <TextView
                             android:id="@+id/tv_tuan_jiantou"
@@ -312,8 +324,8 @@
                             android:layout_marginTop="8dp"
                             android:gravity="center"
                             android:text=">"
-                            android:textSize="18sp"
-                            android:textColor="@color/con_dark" />
+                            android:textColor="@color/con_dark"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/tv_tuangou_more"
@@ -327,8 +339,8 @@
                             android:layout_toStartOf="@+id/tv_tuan_jiantou"
                             android:gravity="center"
                             android:text="团购入口"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
 
                     </RelativeLayout>
@@ -377,8 +389,8 @@
                             android:layout_toRightOf="@id/image_tui"
                             android:gravity="center"
                             android:text="人气推荐"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
                         <TextView
                             android:id="@+id/tv_tui_jiantou"
@@ -392,8 +404,8 @@
                             android:layout_marginTop="8dp"
                             android:gravity="center"
                             android:text=">"
-                            android:textSize="18sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/tv_tuijian_more"
@@ -407,8 +419,8 @@
                             android:layout_toStartOf="@+id/tv_tui_jiantou"
                             android:gravity="center"
                             android:text="更多"
-                            android:textSize="15sp"
-                            android:textColor="@color/con_dark"/>
+                            android:textColor="@color/con_dark"
+                            android:textSize="15sp" />
 
 
                     </RelativeLayout>
