--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_home_select_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_home_select_address.xml
@@ -1,51 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:gravity="center_vertical"
-        android:layout_height="55dp">
-
-        <ImageButton
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_back_light"/>
-        
-        <TextView
-            android:text="选择配送地点"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-    </RelativeLayout>
-
-    <TextView
-     android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="配送地址"
-        android:gravity="center_vertical"
-        android:textSize="18sp"/>
-    
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@drawable/divider_shape"/>
-    
     <LinearLayout
+        android:id="@+id/ll_address_layout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/con_grey_white2"
+        android:layout_marginBottom="140dp"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center_vertical">
+
+            <ImageButton
+                android:id="@+id/imgBtn_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_back_light" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="选择配送地点"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center_vertical"
+            android:text="配送地址"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/con_font_gray" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcy_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/con_white">
+
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/rl_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/con_white">
+
+        <Button
+            android:id="@+id/btn_add_address_confirm"
+            android:layout_marginTop="10dp"
+            android:layout_width="180dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="6dp"
+            android:background="@drawable/button_address_unchecked_shape"
+            android:text="确认"
+            android:textColor="@color/con_white"
+            android:textSize="18sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_add_address"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_above="@+id/rl_confirm"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/btn_add_address_list"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button_address_add_shape"
+            android:text="+新增收货地址"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
+    </RelativeLayout>
+</RelativeLayout>
