--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address_add.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address_add.xml
@@ -1,196 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <include layout="@layout/activity_top_bar"/>
+    <include layout="@layout/activity_top_bar" />
 
     <View
         android:id="@+id/view_info_address_one_add"
         style="@style/view_big"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/view_info_address_one_add">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <RelativeLayout
-                style="@style/RlInfoStyle">
+
+            <RelativeLayout style="@style/RlInfoStyle">
+
                 <TextView
                     android:id="@+id/tv_personal_info_address_name_add"
                     style="@style/tv_personal_info_address"
-                    android:text="收\t\t货\t\t人："/>
+                    android:text="收\t\t货\t\t人：" />
+
                 <EditText
                     android:id="@+id/et_personal_info_address_name"
+                    style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_personal_info_address_name_add"
-                    android:hint="请输入用户名称"
-                    style="@style/et_personal_info_address"/>
+                    android:hint="请输入用户名称" />
             </RelativeLayout>
-            <View
-                style="@style/view_small"/>
-            <RelativeLayout
-                style="@style/RlInfoStyle">
+
+            <View style="@style/view_small" />
+
+            <RelativeLayout style="@style/RlInfoStyle">
+
                 <TextView
                     android:id="@+id/tv_personal_info_address_phone_add"
                     style="@style/tv_personal_info_address"
-                    android:text="收货电话："/>
+                    android:text="收货电话：" />
+
                 <EditText
-                    style="@style/et_personal_info_address"
                     android:id="@+id/et_personal_info_address_phone_add"
+                    style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_personal_info_address_phone_add"
                     android:hint="请输入您的收货电话"
-                    android:inputType="phone"/>
+                    android:inputType="phone" />
             </RelativeLayout>
-            <View
-                style="@style/view_small"/>
-            <RelativeLayout
-                style="@style/RlInfoStyle">
+
+            <View style="@style/view_small" />
+
+            <RelativeLayout style="@style/RlInfoStyle">
+
                 <TextView
-                    style="@style/tv_personal_info_address"
                     android:id="@+id/tv_personal_info_address_city_add"
-                    android:text="所在城市:"/>
+                    style="@style/tv_personal_info_address"
+                    android:text="所在城市:" />
                 <!--<EditText-->
                 <!--style="@style/et_personal_info_address"-->
                 <!--android:id="@+id/et_personal_info_address_city"-->
                 <!--android:layout_toRightOf="@id/tv_personal_info_address_city"-->
                 <!--android:hint="选择你所在城市"/>-->
                 <Spinner
-                    android:layout_toRightOf="@id/tv_personal_info_address_city_add"
+                    android:id="@+id/sp_personal_info_address_add"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_marginRight="25dp"
                     android:layout_marginEnd="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_toRightOf="@id/tv_personal_info_address_city_add"
                     android:background="#00000000"
-                    android:id="@+id/sp_personal_info_address_add">
-                </Spinner>
+                    android:gravity="center_vertical"/>
             </RelativeLayout>
-            <View
-                style="@style/view_small"/>
-            <RelativeLayout
-                style="@style/RlInfoStyle">
+
+            <View style="@style/view_small" />
+
+            <RelativeLayout style="@style/RlInfoStyle">
+
                 <TextView
-                    style="@style/tv_personal_info_address"
                     android:id="@+id/tv_personal_info_address_address_add"
-                    android:text="收货地址:"/>
+                    style="@style/tv_personal_info_address"
+                    android:text="收货地址:" />
+
                 <EditText
+                    android:id="@+id/et_personal_info_address_address_add"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_personal_info_address_address_add"
-                    android:id="@+id/et_personal_info_address_address_add"
-                    android:hint="请输入收货地址"/>
+                    android:hint="请输入收货地址" />
             </RelativeLayout>
-            <View
-                style="@style/view_small"/>
-            <RelativeLayout
-                style="@style/RlInfoStyle">
+
+            <View style="@style/view_small" />
+
+            <RelativeLayout style="@style/RlInfoStyle">
+
                 <TextView
-                    style="@style/tv_personal_info_address"
                     android:id="@+id/tv_personal_info_address_num_add"
-                    android:text="楼号门牌:"/>
+                    style="@style/tv_personal_info_address"
+                    android:text="楼号门牌:" />
+
                 <EditText
+                    android:id="@+id/et_personal_info_address_num_add"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_personal_info_address_num_add"
-                    android:id="@+id/et_personal_info_address_num_add"
-                    android:hint="楼号/门牌单元号"/>
+                    android:hint="楼号/门牌单元号" />
             </RelativeLayout>
-            <View
-                style="@style/view_small"/>
-            <RelativeLayout
-                style="@style/RlInfoStyle">
+
+            <View style="@style/view_small" />
+
+            <RelativeLayout style="@style/RlInfoStyle">
+
                 <TextView
-                    style="@style/tv_personal_info_address"
                     android:id="@+id/tv_personal_info_address_type_add"
-                    android:text="地址类型:"/>
+                    style="@style/tv_personal_info_address"
+                    android:text="地址类型:" />
+
                 <RadioGroup
-                    android:orientation="horizontal"
+                    android:id="@+id/rgp_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/tv_personal_info_address_type_add">
+                    android:layout_toRightOf="@id/tv_personal_info_address_type_add"
+                    android:orientation="horizontal">
+
                     <RadioButton
-                        android:button="@null"
-                        android:checked="false"
                         android:id="@+id/bt_work_personal_info_address_type_add"
+                        android:layout_width="40dp"
+                        android:layout_height="24dp"
+                        android:layout_marginBottom="12dp"
+                        android:layout_marginTop="14dp"
                         android:layout_toRightOf="@id/tv_personal_info_address_type_add"
-                        android:layout_width="40dp"
-                        android:layout_height="24dp"
-                        android:textColor="#ffffff"
-                        android:text="公司"
                         android:layout_weight="1"
-                        android:layout_marginTop="14dp"
-                        android:layout_marginBottom="12dp"
-                        android:textSize="12sp"
-                        android:gravity="center"
-                        android:background="@drawable/button_address_bg_selector"/>
-                    <RadioButton
+                        android:background="@drawable/button_address_bg_selector"
                         android:button="@null"
                         android:checked="false"
+                        android:gravity="center"
+                        android:text="公司"
+                        android:textColor="#ffffff"
+                        android:textSize="12sp" />
+
+                    <RadioButton
                         android:id="@+id/bt_family_personal_info_address_type_add"
+                        android:layout_width="40dp"
+                        android:layout_height="24dp"
+                        android:layout_marginBottom="12dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="14dp"
                         android:layout_toRightOf="@id/bt_work_personal_info_address_type_add"
-                        android:layout_width="40dp"
-                        android:layout_height="24dp"
-                        android:textColor="#ffffff"
+                        android:background="@drawable/button_address_bg_selector"
+                        android:button="@null"
+                        android:checked="false"
+                        android:gravity="center"
                         android:text="住宅"
-                        android:layout_marginTop="14dp"
-                        android:layout_marginBottom="12dp"
-                        android:textSize="12sp"
-                        android:gravity="center"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/button_address_bg_selector"/>
+                        android:textColor="#ffffff"
+                        android:textSize="12sp" />
+
                     <RadioButton
-                        android:button="@null"
-                        android:checked="false"
                         android:id="@+id/bt_school_personal_info_address_type_add"
-                        android:layout_toRightOf="@id/bt_family_personal_info_address_type_add"
                         android:layout_width="40dp"
                         android:layout_height="24dp"
-                        android:textColor="#ffffff"
-                        android:text="学校"
-                        android:layout_marginTop="14dp"
                         android:layout_marginBottom="12dp"
-                        android:textSize="12sp"
-                        android:gravity="center"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/button_address_bg_selector"/>
-                    <RadioButton
+                        android:layout_marginTop="14dp"
+                        android:layout_toRightOf="@id/bt_family_personal_info_address_type_add"
+                        android:background="@drawable/button_address_bg_selector"
                         android:button="@null"
                         android:checked="false"
+                        android:gravity="center"
+                        android:text="学校"
+                        android:textColor="#ffffff"
+                        android:textSize="12sp" />
+
+                    <RadioButton
                         android:id="@+id/bt_other_personal_info_address_type_add"
-                        android:layout_toRightOf="@id/bt_school_personal_info_address_type_add"
                         android:layout_width="40dp"
                         android:layout_height="24dp"
-                        android:textColor="#ffffff"
-                        android:text="其他"
-                        android:layout_marginTop="14dp"
                         android:layout_marginBottom="12dp"
-                        android:textSize="12sp"
-                        android:gravity="center"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/button_address_bg_selector"/>
+                        android:layout_marginTop="14dp"
+                        android:layout_toRightOf="@id/bt_school_personal_info_address_type_add"
+                        android:background="@drawable/button_address_bg_selector"
+                        android:button="@null"
+                        android:checked="false"
+                        android:gravity="center"
+                        android:text="其他"
+                        android:textColor="#ffffff"
+                        android:textSize="12sp" />
                 </RadioGroup>
             </RelativeLayout>
-            <View
-                style="@style/view_small"/>
+
+            <View style="@style/view_small" />
+
             <View
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp" />
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal">
+
                 <Button
-                    android:layout_marginTop="20dp"
                     android:id="@+id/btn_save_address_add"
                     android:layout_width="320dp"
                     android:layout_height="40dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_shape_color"
                     android:text="保存收货地址"
-                    android:textSize="16sp"
                     android:textColor="#ffffff"
-                    android:background="@drawable/button_shape_color"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
