--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_home.xml
@@ -49,7 +49,7 @@
                 android:ellipsize="end"
                 android:gravity="center"
                 android:lines="1"
-                android:text="益江路 511弄..."
+                android:text="请选择地址"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
