--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_shoppingcart_product_details.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_shoppingcart_product_details.xml
@@ -25,11 +25,12 @@
                     layout="@layout/activity_top_bar_product_details"/>
 
                 <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="260dp"
+                    android:id="@+id/iv_product_details"
+                    android:layout_width="300dp"
+                    android:layout_height="240dp"
                     android:layout_centerInParent="true"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="60dp"
                     android:src="@drawable/ic_shoppingcart_product"/>
             </RelativeLayout>
 
