--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_top_bar_product_details.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_top_bar_product_details.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#00000000"
+                android:background="#0e932e"
                 android:clipToPadding="true"
                 android:fitsSystemWindows="true" >
 
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="#ffffff"
-        android:textSize="18sp" />
+        android:textSize="17sp" />
 
     <Button
         android:id="@+id/top_bar_right"
