--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_sort.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_sort.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_below="@id/top_search"
-        android:background="@color/con_blue" />
+        android:background="@color/con_green" />
 
     <LinearLayout
         android:layout_width="match_parent"
