--- a/QianJiaJia-kitchen/app/src/main/res/drawable/circle_product_number_shape.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/drawable/circle_product_number_shape.xml
@@ -3,6 +3,9 @@
        android:shape="oval">
 
     <solid android:color="#0e932e"/>
-    <size android:height="18dp"
-          android:width="18dp"/>
+    <size android:height="16dp"
+          android:width="16dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="#ffffff"/>
 </shape>
