--- a/QianJiaJia-kitchen/app/src/main/res/drawable/circle_shape.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/drawable/circle_shape.xml
@@ -4,12 +4,14 @@
     android:dither="@bool/abc_action_bar_embed_tabs">
 
     <!-- 填充颜色 -->
-    <solid android:color="@color/con_red" />
+    <solid android:color="@color/con_yellow" />
 
+    <size android:height="16dp"
+          android:width="16dp"/>
     <!--线的宽度，颜色灰色-->
-    <stroke android:width="1dp" android:color="@color/con_red"/>
+    <stroke android:width="1dp" android:color="#efefef"/>
 
     <!-- 矩形的圆角半径 -->
-    <corners android:radius="3dp"  />
+    <!--<corners android:radius="3dp"  />-->
 
 </shape>
