--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_shoppingcart_product_details.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_shoppingcart_product_details.xml
@@ -377,7 +377,7 @@
                 android:gravity="center"
                 android:padding="2dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/circle_product_number_shape"/>
+                android:background="@drawable/circle_shape"/>
         </RelativeLayout>
     </RelativeLayout>
 
