--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_sort_subsortlist_view.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_sort_subsortlist_view.xml
@@ -37,6 +37,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="3dp"
                 android:background="@drawable/circle_shape"
                 android:gravity="center"
                 android:textAlignment="center"
